# Smart-FArm

CodeGeeks/: Makefile  Makefile.am  Makefile.in  Ouvrier.txt  capteur.txt  client.txt  config.h  config.status  configure  configure.in  defect.txt  hola.txt  hum.txt  plant.txt  projet2.glade  projet2.gladep.bak  tempo.txt
CodeGeeks/autom4te.cache/: output.1  requests  traces.0  traces.1
CodeGeeks/po/: Makefile  Makefile.in
CodeGeeks/src/: Makefile  Makefile.am  Makefile.in  Presence.txt  Troupeaux.c  Troupeaux.h  auth.c  auth.h  callbacks.c  callbacks.h  client.c  client.h  fonction.c  fonction.h  functions.c  functions.h  interface.c.bak  interface.h.bak  main.c  plant.c  plant.h  prog  projet2
CodeGeeks/src/.deps/: auth.Po  callbacks.Po  client.Po  fonction.Po  functions.Po  plant.Po
project11/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  project11.glade.bak  project11.gladep.bak
project11/autom4te.cache/: output.1  requests  traces.0  traces.1
project11/po/: Makefile  Makefile.in
project11/src/: Makefile  Makefile.am  Makefile.in  Troupeaux.c  Troupeaux.h  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  main.c  project11  troupeaux.txt
project11/src/.deps/: Troupeaux.Po  callbacks.Po
